--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   </head>
   <body>
     <div class="jumbotron">
+      <h1>Thanks for Signing Up!</h1>
+      <p>We'll send you updates on meeting times/dates and more.</p>
     </div>
   </body>
 </html>
