--- a/index.html
+++ b/index.html
@@ -4,11 +4,45 @@
     <title>Official Science Club</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.5/cosmo/bootstrap.min.css" rel="stylesheet" integrity="sha256-IF1P9CSIVOaY4nBb5jATvBGnxMn/4dB9JNTLqdxKN9w= sha512-UsfHxnPESse3RgYeaoQ7X2yXYSY5f6sB6UT48+F2GhNLqjbPhtwV2WCUQ3eQxeghkbl9PioaTOHNA+T0wNki2w==" crossorigin="anonymous">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="/styles.css" rel="stylesheet">
   </head>
   <body>
     <div class="jumbotron">
+      <div class="container-fluid">
+        <div class="text-center col-sm-10 col-sm-offset-1 col-xs-12">
+          <h1>Wissahickon Science Club <i class="fa fa-flask"></i></h1>
+          <!-- Begin MailChimp Signup Form -->
+          <div id="mc_embed_signup">
+            <form action="//github.us11.list-manage.com/subscribe/post?u=c1db969a962050aea637e87f4&amp;id=bc1e997bcf" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+              <h2>Subscribe to Meeting Reminders</h2>
+              <div class="form-group text-left">
+                <label for="mce-EMAIL" class="text">Email Address  <span class="asterisk">*</span>
+                </label>
+                <input type="email" value="" name="EMAIL" class="form-control input-lg" id="mce-EMAIL" placeholder="Email Address">
+              </div>
+              <div class="form-group text-left">
+                <label for="mce-FNAME">First Name </label>
+                <input type="text" value="" name="FNAME" class="form-control input-lg" id="mce-FNAME" placeholder="First Name">
+              </div>
+              <div class="form-group text-left">
+                <label for="mce-LNAME">Last Name </label>
+                <input type="text" value="" name="LNAME" class="form-control input-lg" id="mce-LNAME" placeholder="Last Name">
+              </div>
+              <div style="position: absolute; left: -5000px;"><input type="text" name="b_c1db969a962050aea637e87f4_bc1e997bcf" tabindex="-1" value=""></div>
+              <div class="clear">
+                <br>
+                <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-transparent btn-lg">
+                  Subscribe&nbsp;&nbsp;<i class="fa fa-envelope-o"></i>
+                </button>
+              </div>
+            </form>
+          </div>
+          <!--End mc_embed_signup-->
+        </div>
+      </div>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   </body>
 </html>
